Add links across pages

--- a/2024paidticket.html
+++ b/2024paidticket.html
@@ -33,6 +33,7 @@ h3 {
 
 <h2>Paid limited selector units</h2>
 <i>S=Summer, X=Xmas, V=Valentine, H=Halloween, F=Festival, NG=Nightglows, P=Pool</i><br>
+See [<a href=2024ticket4.html>Free 4* selector tickets</a>] or [<a href=2024ticket5.html>Free 5* selector tickets</a>] <br>
 </div>
 
 <div id="images"><p>
