--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a href=2024ticket4.html>4* tickets</a> <a href=2024ticket5.html>5* tickets</a> 
+[<a href=2024ticket4.html>4* selector tickets</a>]<br> 
+[<a href=2024ticket5.html>5* selector tickets</a>]<br> 
+[<a href=2024paidticket.html>Paid selector tickets</a>]<br>  
