--- a/2024ticket4.html
+++ b/2024ticket4.html
@@ -32,11 +32,12 @@ h3 {
 
 
 <h2>Click to visit the wiki page!</h2>
+See [<a href=2024paidticket.html>Paid selector tickets</a>] or [<a href=2024ticket5.html>Free 5* selector tickets</a>] <br>
 </div>
 
 <div id="images"><p>
 <h3>Ticket 4* units (2024)</h3>
-<i>You get 8 of these selector tickets. Each unit can be picked only 2 times.</i><br>
+<i>You get 8 of these selector tickets. Each unit can be picked only twice.</i><br>
 <a href="https://housamo.wiki/shiro"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_shirou02.png alt=Shiro><div class="caption">Shiro</div></a>
 <a href="https://housamo.wiki/kengo"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kengo02.png alt=Kengo><div class="caption">Kengo</div></a>
 <a href="https://housamo.wiki/ryouta"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ryouta02.png alt=Ryota><div class="caption">Ryota</div></a>
