--- a/2024ticket5.html
+++ b/2024ticket5.html
@@ -32,11 +32,12 @@ h3 {
 
 
 <h2>Click to visit the wiki page!</h2>
+See [<a href=2024paidticket.html>Paid selector tickets</a>] or [<a href=2024ticket4.html>Free 4* selector tickets</a>] <br>
 </div>
 
 <div id="images"><p>
 <h3>Ticket 5* units (2024)</h3>
-<i>You get 1 of this selector ticket. It does not expire and will not be updated. The 2023 version (Before 22 November 2024) ends with Sandayu.</i><br>
+<i>You get 1 of this selector ticket. It does not expire and will not be updated.</i><br>
 <a href="https://housamo.wiki/kengo"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kengo03.png alt=Kengo><div class="caption">Kengo</div></a>
 <a href="https://housamo.wiki/oniwaka"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_oniwaka02.png alt=Oniwaka><div class="caption">Oniwaka</div></a>
 <a href="https://housamo.wiki/claude"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_claude02.png alt=Claude><div class="caption">Claude</div></a>
