Fixed paid ticket unit links

--- a/2024paidticket.html
+++ b/2024paidticket.html
@@ -40,7 +40,7 @@ See [<a href=2024ticket4.html>Free 4* selector tickets</a>] or [<a href=2024tick
 <h3>5*</h3>
 <a href="https://housamo.wiki/Ded#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ded03.png alt=Ded><div class="caption">S!Ded</div></a>
 <a href="https://housamo.wiki/Yasuyori#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_yasuyori03.png alt=Yasuyori><div class="caption">S!Yasuyori</div></a>
-<a href="https://housamo.wiki/Nekros#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nekros02.png alt=Nekros><div class="caption">Nekros</div></a>
+<a href="https://housamo.wiki/Nekros%26Bacchus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nekros02.png alt=Nekros><div class="caption">Nekros</div></a>
 <a href="https://housamo.wiki/Benten#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_benten03.png alt=Benten><div class="caption">X!Benten</div></a>
 <a href="https://housamo.wiki/Nomad#transient3"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nomad04.png alt=Nomad><div class="caption">X!Nomad</div></a>
 <a href="https://housamo.wiki/Balor#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_balor03.png alt=Balor><div class="caption">V!Balor</div></a>
@@ -50,11 +50,11 @@ See [<a href=2024ticket4.html>Free 4* selector tickets</a>] or [<a href=2024tick
 <a href="https://housamo.wiki/Sandayu#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_sandayu03.png alt=Sandayu><div class="caption">H!Sandayu</div></a>
 <a href="https://housamo.wiki/Kresnik#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kresnik03.png alt=Kresnik><div class="caption">H!Kresnik</div></a>
 <a href="https://housamo.wiki/Typhon#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_typhon03.png alt=Typhon><div class="caption">S!Typhon</div></a>
-<a href="https://housamo.wiki/Hougen#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hougen03.png alt=Hougen><div class="caption">F!Hougen</div></a>
+<a href="https://housamo.wiki/Hogen#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hougen03.png alt=Hougen><div class="caption">F!Hougen</div></a>
 <a href="https://housamo.wiki/Shino#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_shino03.png alt=Shino><div class="caption">V!Shino</div></a>
-<a href="https://housamo.wiki/Touji#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_touji03.png alt=Toji><div class="caption">V!Toji</div></a>
-<a href="https://housamo.wiki/Tangaroamugen#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tangaroamugen02.png alt=Tangaroamugen><div class="caption">Tangaroamugen</div></a>
-<a href="https://housamo.wiki/Wakantankamugen#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_wakantankamugen02.png alt=Wakantankamugen><div class="caption">Wakantankamugen</div></a>
+<a href="https://housamo.wiki/Toji#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_touji03.png alt=Toji><div class="caption">V!Toji</div></a>
+<a href="https://housamo.wiki/Tangaroa∞#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tangaroamugen02.png alt=Tangaroamugen><div class="caption">Tangaroamugen</div></a>
+<a href="https://housamo.wiki/Wakan_Tanka∞#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_wakantankamugen02.png alt=Wakantankamugen><div class="caption">Wakantankamugen</div></a>
 <a href="https://housamo.wiki/Krampus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_krampus02.png alt=Krampus><div class="caption">V!Krampus</div></a>
 <a href="https://housamo.wiki/Cthugha#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_cthugha03.png alt=Cthugha><div class="caption">NG!Cthugha</div></a>
 <a href="https://housamo.wiki/Kurogane#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kurogane03.png alt=Kurogane><div class="caption">NG!Kurogane</div></a>
@@ -64,30 +64,30 @@ See [<a href=2024ticket4.html>Free 4* selector tickets</a>] or [<a href=2024tick
 <div id="images"><p>
 <h3>4*</h3>
 <a href="https://housamo.wiki/Ziz#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ziz03.png alt=Ziz><div class="caption">X!Ziz</div></a>
-<a href="https://housamo.wiki/Chouji#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_chouji03.png alt=Chouji><div class="caption">X!Chouji</div></a>
+<a href="https://housamo.wiki/Choji#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_chouji03.png alt=Chouji><div class="caption">X!Chouji</div></a>
 <a href="https://housamo.wiki/Orgus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_orgus02.png alt=Orgus><div class="caption">Orgus</div></a>
 <a href="https://housamo.wiki/Sol#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_sol02.png alt=Sol><div class="caption">Sol</div></a>
 <a href="https://housamo.wiki/Ose#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ose03.png alt=Ose><div class="caption">X!Ose</div></a>
 <a href="https://housamo.wiki/Jiraiya#transient3"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_jiraiya04.png alt=Jiraiya><div class="caption">X!Jiraiya</div></a>
 <a href="https://housamo.wiki/Itzamna#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_itzamna03.png alt=Itzamna><div class="caption">V!Itzamna</div></a>
-<a href="https://housamo.wiki/Caitsith#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_caitsith03.png alt=Caitsith><div class="caption">V!Caitsith</div></a>
+<a href="https://housamo.wiki/Cait_Sith#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_caitsith03.png alt=Caitsith><div class="caption">V!Caitsith</div></a>
 <a href="https://housamo.wiki/Oz#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_oz03.png alt=Oz><div class="caption">P!Oz</div></a>
 <a href="https://housamo.wiki/Yamasachihiko#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_yamasachihiko03.png alt=Yamasachihiko><div class="caption">P!Yamasachihiko</div></a>
-<a href="https://housamo.wiki/Thesmokygod#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_thesmokygod03.png alt=Smokygod><div class="caption">P!Smokygod</div></a>
+<a href="https://housamo.wiki/Smoky_God#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_thesmokygod03.png alt=Smokygod><div class="caption">P!Smokygod</div></a>
 <a href="https://housamo.wiki/Tsukuyomi#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tsukuyomi03.png alt=Tsukuyomi><div class="caption">H!Tsukuyomi</div></a>
 <a href="https://housamo.wiki/Ellie#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ellie03.png alt=Ellie><div class="caption">H!Ellie</div></a>
 <a href="https://housamo.wiki/Ifrit#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ifrit03.png alt=Ifrit><div class="caption">S!Ifrit</div></a>
 <a href="https://housamo.wiki/Fenrir#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_fenrir03.png alt=Fenrir><div class="caption">S!Fenrir</div></a>
 <a href="https://housamo.wiki/Hanuman#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hanuman03.png alt=Hanuman><div class="caption">S!Hanuman</div></a>
-<a href="https://housamo.wiki/Gouryou#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_gouryou03.png alt=Ganglie><div class="caption">S!Ganglie</div></a>
+<a href="https://housamo.wiki/Ganglie#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_gouryou03.png alt=Ganglie><div class="caption">S!Ganglie</div></a>
 <a href="https://housamo.wiki/Tadatomo#transient3"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tadatomo03.png alt=Tadatomo><div class="caption">V!Tadatomo</div></a>
 <a href="https://housamo.wiki/Licht#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_licht03.png alt=Licht><div class="caption">V!Licht</div></a>
 <a href="https://housamo.wiki/Hakumen#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hakumen03.png alt=Hakumen><div class="caption">V!Hakumen</div></a>
 <a href="https://housamo.wiki/Nobuharu#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nobuharu03.png alt=Nobuharu><div class="caption">F!Nobuharu</div></a>
 <a href="https://housamo.wiki/Kenta#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kenta03.png alt=Kenta><div class="caption">V!Kenta</div></a>
 <a href="https://housamo.wiki/Surtr#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_surtr03.png alt=Surtr><div class="caption">V!Surtr</div></a>
-<a href="https://housamo.wiki/Harlot#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_harlot03.png alt=Babalon><div class="caption">F!Babalon</div></a>
-<a href="https://housamo.wiki/Tetsugyuu#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tetsugyuu03.png alt=Tetsuox><div class="caption">H!Tetsuox</div></a>
+<a href="https://housamo.wiki/Babalon#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_harlot03.png alt=Babalon><div class="caption">F!Babalon</div></a>
+<a href="https://housamo.wiki/Tetsuox#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tetsugyuu03.png alt=Tetsuox><div class="caption">H!Tetsuox</div></a>
 <a href="https://housamo.wiki/Breke#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_breke03.png alt=Breke><div class="caption">NG!Breke</div></a>
 <a href="https://housamo.wiki/Claus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_claus02.png alt=Claus><div class="caption">Claus</div></a>
 </p></div><hr>
