Fix Krampus variant

--- a/2024paidticket.html
+++ b/2024paidticket.html
@@ -55,7 +55,7 @@ See [<a href=2024ticket4.html>Free 4* selector tickets</a>] or [<a href=2024tick
 <a href="https://housamo.wiki/Toji#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_touji03.png alt=Toji><div class="caption">V!Toji</div></a>
 <a href="https://housamo.wiki/Tangaroa∞#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tangaroamugen02.png alt=Tangaroamugen><div class="caption">Tangaroamugen</div></a>
 <a href="https://housamo.wiki/Wakan_Tanka∞#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_wakantankamugen02.png alt=Wakantankamugen><div class="caption">Wakantankamugen</div></a>
-<a href="https://housamo.wiki/Krampus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_krampus02.png alt=Krampus><div class="caption">V!Krampus</div></a>
+<a href="https://housamo.wiki/Krampus#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_krampus02.png alt=Krampus><div class="caption">F!Krampus</div></a>
 <a href="https://housamo.wiki/Cthugha#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_cthugha03.png alt=Cthugha><div class="caption">NG!Cthugha</div></a>
 <a href="https://housamo.wiki/Kurogane#transient2"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kurogane03.png alt=Kurogane><div class="caption">NG!Kurogane</div></a>
 <a href="https://housamo.wiki/Gordon#transient1"><img src = https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_gordon02.png alt=Gordon><div class="caption">Gordon</div></a>
