--- a/2025ticket4.html
+++ b/2025ticket4.html
@@ -22,7 +22,7 @@
         background-color: var(--bg-body);
         color: var(--text-main);
         margin: 0;
-        padding: 20px;
+        padding: 10px;
         line-height: 1.5;
     }
     h3 {
@@ -45,8 +45,8 @@
     .legend .l-yellow { color: var(--color-yellow); background: var(--color-yellow-bg); border: 1px solid var(--color-yellow); }
     .unit-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-        gap: 12px;
+        grid-template-columns: repeat(auto-fill, minmax(min(90px,18%), 1fr));
+        gap: clamp(2px, 1vw, 10px);
         padding: 0;
         list-style: none;
     }
@@ -78,16 +78,15 @@
         background-color: var(--color-yellow-bg);
     }
     .unit-card img {
-        width: 100px;
-        height: 100px;
+        width: 100%;
         object-fit: contain;
-        margin-top: 8px;
+        margin-top: clamp(2px, 1vw, 8px);
         filter: drop-shadow(0 2px 2px rgba(0,0,0,0.1));
     }
     .caption {
         width: 100%;
-        padding: 6px 4px 8px 4px;
-        font-size: 0.85rem;
+        padding: clamp(2px, 0.5vw, 6px) 2px clamp(4px, 1vw, 8px) 2px;
+        font-size: clamp(9px, 2.9vw, 0.85rem); 
         font-weight: 600;
         text-align: center;
         white-space: nowrap;
@@ -96,6 +95,7 @@
     }
     .unit-card.green .caption { color: var(--color-green); }
     .unit-card.yellow .caption { color: var(--color-yellow); }
+
 
 </style>
 </head>
@@ -106,7 +106,7 @@
     <p>
         You get 9 of these selector tickets. Each unit can be picked only twice.<br>
         <span class="legend">
-            Recommended beginner picks: <span class="l-green">Green</span>
+            Recommended beginner picks: <span class="l-green">Green</span><br>
             Good advanced gameplay units: <span class="l-yellow">Yellow</span>
         </span>
     </p>
