Fix mistake in title + embed for paid 2025

--- a/2025paidticket.html
+++ b/2025paidticket.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta content="2025 TAS 4 star unit selector" property="og:title" />
-<title>2025 TAS 4 Star Selector</title>
+<meta content="2025 TAS paid ticket selector" property="og:title" />
+<title>2025 TAS paid ticket Selector</title>
 <style>
     :root {
         --bg-body: #f4f6f8;
