--- a/2025ticket4.html
+++ b/2025ticket4.html
@@ -107,7 +107,7 @@
         You get 9 of these selector tickets. Each unit can be picked only twice.<br>
         <span class="legend">
             Recommended beginner picks: <span class="l-green">Green</span><br>
-            Good advanced gameplay units: <span class="l-yellow">Yellow</span>
+            Advanced gameplay (gimmick) units: <span class="l-yellow">Yellow</span>
         </span>
     </p>
 </header>
@@ -162,7 +162,7 @@
     <li><a class="unit-card" href="https://housamo.wiki/andvari"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_andvari02.png" alt="Andvari Icon"><div class="caption">Andvari</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/ibaraki"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ibaraki02.png" alt="Ibaraki Icon"><div class="caption">Ibaraki</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Horkeu_Kamui"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_horkeukamui02.png" alt="Horkeukamui Icon"><div class="caption">Horkeu Kamui</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/taromaiti"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_taromaiti02.png" alt="Taromaiti Icon"><div class="caption">Taromaiti</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/taromaiti"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_taromaiti02.png" alt="Taromaiti Icon"><div class="caption">Taromaiti</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/hougen"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hougen02.png" alt="Hogen Icon"><div class="caption">Hogen</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/melusine"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_melusine02.png" alt="Melusine Icon"><div class="caption">Melusine</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/arslan"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_arslan02.png" alt="Arsalan Icon"><div class="caption">Arsalan</div></a></li>
@@ -198,7 +198,7 @@
     <li><a class="unit-card" href="https://housamo.wiki/furufumi"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_furufumi02.png" alt="Furufumi Icon"><div class="caption">Furufumi</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Hombre_Tigre"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hombretigre02.png" alt="Hombretigre Icon"><div class="caption">Hombre Tigre</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/goemon"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_goemon02.png" alt="Goemon Icon"><div class="caption">Goemon</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/licho"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_licho02.png" alt="Licho Icon"><div class="caption">Licho</div></a></li>
+    <li><a class="unit-card green" href="https://housamo.wiki/licho"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_licho02.png" alt="Licho Icon"><div class="caption">Licho</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/tomte"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tomte02.png" alt="Tomte Icon"><div class="caption">Tomte</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/shennong"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_shennong02.png" alt="Shennong Icon"><div class="caption">Shennong</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/yasuyori"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_yasuyori02.png" alt="Yasuyori Icon"><div class="caption">Yasuyori</div></a></li>
@@ -214,19 +214,19 @@
     <li><a class="unit-card" href="https://housamo.wiki/tvastar"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tvastar02.png" alt="Tvastar Icon"><div class="caption">Tvastar</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/marduk"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_marduk02.png" alt="Marduk Icon"><div class="caption">Marduk</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/bertro"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_bertro02.png" alt="Bertro Icon"><div class="caption">Bertro</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/itzamna"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_itzamna02.png" alt="Itzamna Icon"><div class="caption">Itzamna</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/itzamna"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_itzamna02.png" alt="Itzamna Icon"><div class="caption">Itzamna</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/macroich"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_macroich02.png" alt="Macroich Icon"><div class="caption">Macroich</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/mephistopheles"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_mephistopheles02.png" alt="Mephistopheles Icon"><div class="caption">Mephistopheles</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/mephistopheles"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_mephistopheles02.png" alt="Mephistopheles Icon"><div class="caption">Mephistopheles</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/babebunyan"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_babebunyan02.png" alt="Babebunyan Icon"><div class="caption">Babe Bunyan</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/masanori"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_masanori02.png" alt="Masanori Icon"><div class="caption">Masanori</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/kresnik"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kresnik02.png" alt="Kresnik Icon"><div class="caption">Kresnik</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/nodens"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nodens02.png" alt="Nodens Icon"><div class="caption">Nodens</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/catoblepas"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_catoblepas02.png" alt="Catoblepas Icon"><div class="caption">Catoblepas</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/thesmokygod"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_thesmokygod02.png" alt="Smokygod Icon"><div class="caption">Smoky God</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/thesmokygod"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_thesmokygod02.png" alt="Smokygod Icon"><div class="caption">Smoky God</div></a></li>
     <li><a class="unit-card yellow" href="https://housamo.wiki/zhurong"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_zhurong02.png" alt="Zhurong Icon"><div class="caption">Zhurong</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/sarutahiko"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_sarutahiko02.png" alt="Sarutahiko Icon"><div class="caption">Sarutahiko</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/hotei"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hotei02.png" alt="Hotei Icon"><div class="caption">Hotei</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/hermes"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hermes02.png" alt="Hermes Icon"><div class="caption">Hermes</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/hermes"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hermes02.png" alt="Hermes Icon"><div class="caption">Hermes</div></a></li>
     <li><a class="unit-card yellow" href="https://housamo.wiki/boogeyman"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_boogeyman02.png" alt="Boogeyman Icon"><div class="caption">Boogeyman</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/barong"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_barong02.png" alt="Barong Icon"><div class="caption">Barong</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/enigma"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_enigma02.png" alt="Enigma Icon"><div class="caption">Enigma</div></a></li>
@@ -248,16 +248,16 @@
     <li><a class="unit-card" href="https://housamo.wiki/amanojaku"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_amanojaku02.png" alt="Amanojaku Icon"><div class="caption">Amanojaku</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/hippolytus"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_hippolytus02.png" alt="Hippolytus Icon"><div class="caption">Hippolytus</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/belphegor"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_belphegor02.png" alt="Belphegor Icon"><div class="caption">Belphegor</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/Ame-no-Uzume"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_amenouzume02.png" alt="Amenouzume Icon"><div class="caption">Ame-no-Uzume</div></a></li>
+    <li><a class="unit-card yellow" href="https://housamo.wiki/Ame-no-Uzume"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_amenouzume02.png" alt="Amenouzume Icon"><div class="caption">Ame-no-Uzume</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Raven_Arthur"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ravenarthur02.png" alt="Ravenarthur Icon"><div class="caption">Raven Arthur</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Tu'er_Shen"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_tuershen02.png" alt="Tuershen Icon"><div class="caption">Tu'er Shen</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/baphomet"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_baphomet02.png" alt="Baphomet Icon"><div class="caption">Baphomet</div></a></li>
     <li><a class="unit-card yellow" href="https://housamo.wiki/kokopelli"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_kokopelli02.png" alt="Kokopelli Icon"><div class="caption">Kokopelli</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/sanzo"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_sanzo02.png" alt="Sanzo Icon"><div class="caption">Sanzo</div></a></li>
+    <li><a class="unit-card green" href="https://housamo.wiki/sanzo"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_sanzo02.png" alt="Sanzo Icon"><div class="caption">Sanzo</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Y'golonac"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_ygolonac02.png" alt="Ygolonac Icon"><div class="caption">Y'golonac</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/himavat"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_himavat02.png" alt="Himavat Icon"><div class="caption">Himavat</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/saturnus"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_saturnus02.png" alt="Saturnus Icon"><div class="caption">Saturnus</div></a></li>
-    <li><a class="unit-card" href="https://housamo.wiki/Snegurochka"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_snegurochka02.png" alt="Snegurochka Icon"><div class="caption">Snegurochka</div></a></li>
+    <li><a class="unit-card green" href="https://housamo.wiki/Snegurochka"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_snegurochka02.png" alt="Snegurochka Icon"><div class="caption">Snegurochka</div></a></li>
     <li><a class="unit-card green" href="https://housamo.wiki/Apollo"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_apollo02.png" alt="Apollo Icon"><div class="caption">Apollo</div></a></li>
     <li><a class="unit-card" href="https://housamo.wiki/Xiwangmu"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_xiwangmu02.png" alt="Xiwangmu Icon"><div class="caption">Xiwangmu</div></a></li>
     <li><a class="unit-card green" href="https://housamo.wiki/Nisroch"><img src="https://cdn.housamo.xyz/housamo/unity/Android/icon/icon_nisroch02.png" alt="Nisroch Icon"><div class="caption">Nisroch</div></a></li>
